// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Ratings component should render 4.3 of 5 highlight icons 1`] = `
<div
  className="ratings"
>
  <div
    className="ratings--background"
  >
    <Icon(HighlightIcon)
      borderColor="grey"
      color="grey"
      key="0"
      size="sm"
    />
    <Icon(HighlightIcon)
      borderColor="grey"
      color="grey"
      key="1"
      size="sm"
    />
    <Icon(HighlightIcon)
      borderColor="grey"
      color="grey"
      key="2"
      size="sm"
    />
    <Icon(HighlightIcon)
      borderColor="grey"
      color="grey"
      key="3"
      size="sm"
    />
    <Icon(HighlightIcon)
      borderColor="grey"
      color="grey"
      key="4"
      size="sm"
    />
  </div>
  <div
    className="ratings--foreground"
    style={
      Object {
        "width": "86%",
      }
    }
  >
    <Icon(HighlightIcon)
      borderColor="orange"
      color="orange"
      key="0"
      size="sm"
    />
    <Icon(HighlightIcon)
      borderColor="orange"
      color="orange"
      key="1"
      size="sm"
    />
    <Icon(HighlightIcon)
      borderColor="orange"
      color="orange"
      key="2"
      size="sm"
    />
    <Icon(HighlightIcon)
      borderColor="orange"
      color="orange"
      key="3"
      size="sm"
    />
    <Icon(HighlightIcon)
      borderColor="orange"
      color="orange"
      key="4"
      size="sm"
    />
  </div>
</div>
`;

exports[`The Ratings component should render a third of 10 approved icons 1`] = `
<div
  className="ratings"
>
  <div
    className="ratings--background"
  >
    <Icon(ApprovedIcon)
      borderColor="grey"
      color="grey"
      key="0"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="grey"
      color="grey"
      key="1"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="grey"
      color="grey"
      key="2"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="grey"
      color="grey"
      key="3"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="grey"
      color="grey"
      key="4"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="grey"
      color="grey"
      key="5"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="grey"
      color="grey"
      key="6"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="grey"
      color="grey"
      key="7"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="grey"
      color="grey"
      key="8"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="grey"
      color="grey"
      key="9"
      size="sm"
    />
  </div>
  <div
    className="ratings--foreground"
    style={
      Object {
        "width": "33.333333333333336%",
      }
    }
  >
    <Icon(ApprovedIcon)
      borderColor="orange"
      color="orange"
      key="0"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="orange"
      color="orange"
      key="1"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="orange"
      color="orange"
      key="2"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="orange"
      color="orange"
      key="3"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="orange"
      color="orange"
      key="4"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="orange"
      color="orange"
      key="5"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="orange"
      color="orange"
      key="6"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="orange"
      color="orange"
      key="7"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="orange"
      color="orange"
      key="8"
      size="sm"
    />
    <Icon(ApprovedIcon)
      borderColor="orange"
      color="orange"
      key="9"
      size="sm"
    />
  </div>
</div>
`;

exports[`The Ratings component should render only background if the rating is null 1`] = `
<div
  className="ratings"
>
  <div
    className="ratings--background"
  >
    <Icon(HighlightIcon)
      borderColor="grey"
      color="grey"
      key="0"
      size="sm"
    />
    <Icon(HighlightIcon)
      borderColor="grey"
      color="grey"
      key="1"
      size="sm"
    />
    <Icon(HighlightIcon)
      borderColor="grey"
      color="grey"
      key="2"
      size="sm"
    />
    <Icon(HighlightIcon)
      borderColor="grey"
      color="grey"
      key="3"
      size="sm"
    />
    <Icon(HighlightIcon)
      borderColor="grey"
      color="grey"
      key="4"
      size="sm"
    />
  </div>
</div>
`;
